[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Matt Mastracci <matthew@mastracci.com>"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/vt-push-parser"

[workspace.dependencies]
vt-push-parser = { path = "crates/vt-push-parser", version = "0.7.0" }
