[package]
name = "fast-strip-ansi"
version = "0.7.0"
description = "A performance-optimized, low-allocation ANSI escape sequence stripper"
readme = "README.md"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
vt-push-parser.workspace = true

[dev-dependencies]
