[package]
name = "fast-strip-ansi"
description = "A performance-optimized, low-allocation ANSI escape sequence stripper"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]

[dependencies]
vt-push-parser.workspace = true

[dev-dependencies]
