[package]
name = "vt-input-push-parser"
description = "A streaming push parser for the VT/xterm input events"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build]
build-script = "build.rs"

[build-dependencies]
vt-push-parser.workspace = true

[dependencies]
vt-push-parser.workspace = true
bitflags = "2.0.0"
derive_more = { version = "2.0.0", features = ["try_from"] }
