[package]
name = "vt-push-parser"
version = "0.7.0"
edition = "2024"
authors = ["Matt Mastracci <matthew@mastracci.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mmastrac/vt-push-parser"
description = "A streaming push parser for the VT/xterm output events"
readme = "README.md"

[dependencies]
smallvec = { version = "1.15.0", features = ["const_new", "const_generics"] }
hex = "0.4.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "smallvec/serde"]

[dev-dependencies]
pretty_assertions = "1.4.0"
hxdmp = "0.2.1"

[[test]]
name = "escapes"
path = "tests/escapes.rs"
harness = false
