[package]
name = "vt-push-parser"
version = "0.8.0"
description = "A streaming push parser for the VT/xterm output events"
readme = "README.md"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
smallvec = { version = "1.15.0", features = ["const_new", "const_generics"] }
hex = "0.4.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "smallvec/serde"]

[dev-dependencies]
pretty_assertions = "1.4.0"
hxdmp = "0.2.1"

[[test]]
name = "escapes"
path = "tests/escapes.rs"
harness = false
